--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "amqplib": "^0.8.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.41"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.10",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.5.4"
+    "nodemon": "^2.0.15"
   }
 }
